Initial Commit * Added React boilerplate * Defined README.md * Set up basic directory structure * Added basic 404 Page and Home page

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
+
+# vs code ignore files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+*.vsix
+.hintrc
